See the end for copying conditions.

Note that changes to the GNU SASL Library is documented in lib/NEWS.
This file track changes to the remaining, non-library, parts of GNU
SASL.  That include the manual, the command line tool, and self tests.

* Version 0.2.28 (unreleased)

** gsasl: Rewrite to use poll instead of select.
Will allow easier porting to Mingw32 in the future.

* Version 0.2.27 (released 2008-07-01)

** Fix SASL operations through TLS.
Report and tiny patch from Enrico Scholz
<enrico.scholz@informatik.tu-chemnitz.de> in
<http://thread.gmane.org/gmane.comp.gnu.gsasl.general/149>.

** Update gnulib files, and include gnulib self-tests.

** Update translations.

* Version 0.2.26 (released 2008-05-05)

** Translations files not stored directly in git to avoid merge conflicts.
This allows us to avoid use of --no-location which makes the
translation teams happier.

** Build fixes for the documentation.

** Update gnulib files.

* Version 0.2.25 (released 2008-03-10)

** gsasl: Fix buffering issue to avoid mixing stdout/stderr outputs.
This would manifest itself when redirecting output to a pipe, such as
when used with Gnus.  Reported by Enrico Scholz
<enrico.scholz@informatik.tu-chemnitz.de>, see
<http://thread.gmane.org/gmane.comp.gnu.gsasl.general/123>.

** Fix non-portable use of brace expansion in makefiles.

* Version 0.2.24 (released 2008-01-15)

** Link self-tests with gnulib, to fix link failures under MinGW.

* Version 0.2.23 (released 2008-01-15)

** Improve CRAM-MD5 self-test to detect if challenges are the same.

** Improve gsasl --help and --version to conform with GNU standards.

** Use gettext 0.17.

** Update gnulib files.

* Version 0.2.22 (released 2007-10-08)

** Development git tree moved to savannah.
See <https://savannah.gnu.org/projects/gsasl/>.

** Fix warnings when building the tool 'gsasl'.

** Update gnulib files.

* Version 0.2.21 (released 2007-08-22)

** Fix typos in manual.
Tiny patch from Brad Hards <bradh@frogmouth.net>.
